--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,11 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.validation=DEBUG
+
+
 
 jwt.secretkey= p0GZ+OZV+GLjdSb6FKRIptKzoZzpNd3go+PLOaU7M+A=
-jwt.expiration=3600000
+jwt.expiration=360000000
+
